       `dbname` to App::Sqitch::Target.
     - Added support for attributes to be passed to the App::Sqitch::Target
       `all_targets` method. Such attributes will be set on all returned
       targets.
     - Changed the alias for the `--set-deploy` option on the `rebase` and
       `checkout` commands from `-d` to `-e` to prevent a conflict with the
       `-d` alias for `--db-name`.

0.9998 2018-10-03T20:53:58Z
     - Fixed an issue where Sqitch would sometimes truncate the registry
       version number fetched from MySQL, most likely because the Perl runtime
       was using 32-bit integers. Fixed by casting the version to CHAR in the
       query, before Perl ever see it. Thanks to Allen Godfrey David for the
       report.
     - Added the Snowflake engine.
     - Now require URI::db v0.19 for Snowflake URI support.
     - The Vertica and Exasol engines now require DBD::ODBC 1.59, which fixes
       a Unicode issue. Thanks to Martin J. Evans for the quick fix
       (perl5-dbi/DBD-ODBC#8)!
     - Added the `bundle` command to `./Build`. This command installs only the
       runtime dependencies into the `--install_base` directory. This should
       simplify building distribution packages, binary installs, Docker images,
       and the like.
     - Added the `--with` option to `./Build`, to require that Sqitch be build
       with the specified engine. Pass once for each engine. See the README
       for the list of supported engines.
     - Added a check for Hash::Merge 0.298 during installation, since that
       release has a fatal bug that breaks Sqitch. If it's installed, the
       installer will issue a warning and added v0.299 to its list of
       dependencies. Thanks to Slaven Rezić for the suggestion (#377).
     - Fixed the PostgreSQL engine so it properly checks the `psql` client
       version to determine whether or not the `:registry` variable is
       supported. Previously it relied on the server version, which would fail